[gd_scene load_steps=2 format=3 uid="uid://c42rweiaeoe1l"]

[ext_resource type="Script" path="res://UI/Control_UI.gd" id="1_0e0h2"]

[node name="Node2D" type="Node2D"]

[node name="Control2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_0e0h2")

[node name="die1" type="Button" parent="Control2"]
layout_mode = 2
offset_left = 162.0
offset_top = 544.0
offset_right = 225.0
offset_bottom = 616.0

[node name="die2" type="Button" parent="Control2"]
layout_mode = 2
offset_left = 254.0
offset_top = 542.0
offset_right = 317.0
offset_bottom = 614.0

[node name="die3" type="Button" parent="Control2"]
layout_mode = 2
offset_left = 341.0
offset_top = 540.0
offset_right = 404.0
offset_bottom = 612.0

[node name="die4" type="Button" parent="Control2"]
layout_mode = 2
offset_left = 426.0
offset_top = 541.0
offset_right = 489.0
offset_bottom = 613.0

[node name="die5" type="Button" parent="Control2"]
layout_mode = 2
offset_left = 515.0
offset_top = 539.0
offset_right = 578.0
offset_bottom = 611.0

[node name="die6" type="Button" parent="Control2"]
layout_mode = 2
offset_left = 604.0
offset_top = 542.0
offset_right = 667.0
offset_bottom = 614.0

[node name="yourdie" type="Button" parent="Control2"]
layout_mode = 2
offset_left = 934.0
offset_top = 540.0
offset_right = 997.0
offset_bottom = 612.0

[node name="roll-day" type="Button" parent="Control2"]
layout_mode = 2
offset_left = 63.0
offset_top = 545.0
offset_right = 126.0
offset_bottom = 617.0

[node name="option1" type="Button" parent="Control2"]
layout_mode = 2
offset_left = 1051.0
offset_top = 412.0
offset_right = 1114.0
offset_bottom = 484.0

[node name="option2" type="Button" parent="Control2"]
layout_mode = 2
offset_left = 15.0
offset_top = 432.0
offset_right = 78.0
offset_bottom = 504.0

[node name="selected" type="RichTextLabel" parent="Control2"]
layout_mode = 0
offset_left = 207.0
offset_top = 8.0
offset_right = 431.0
offset_bottom = 80.0

[node name="position-label" type="RichTextLabel" parent="Control2"]
layout_mode = 0
offset_left = 330.0
offset_top = 410.0
offset_right = 831.0
offset_bottom = 482.0
text = "sdlkasldjsalkjdklajdkljakjddlkasjkdasldjaklsdjlskajdlkajsdlka"

[node name="win-position" type="RichTextLabel" parent="Control2"]
layout_mode = 0
offset_left = 666.0
offset_top = 342.0
offset_right = 1167.0
offset_bottom = 414.0
text = "sdlkasldjsalkjdklajdkljakjddlkasjkdasldjaklsdjlskajdlkajsdlka"

[node name="lose-position" type="RichTextLabel" parent="Control2"]
layout_mode = 0
offset_left = 49.0
offset_top = 327.0
offset_right = 550.0
offset_bottom = 399.0
text = "sdlkasldjsalkjdklajdkljakjddlkasjkdasldjaklsdjlskajdlkajsdlka"

[node name="results" type="RichTextLabel" parent="Control2"]
layout_mode = 0
offset_left = 476.0
offset_top = 13.0
offset_right = 575.0
offset_bottom = 85.0

[node name="whowins" type="RichTextLabel" parent="Control2"]
layout_mode = 0
offset_left = 624.0
offset_top = 18.0
offset_right = 840.0
offset_bottom = 90.0
